# linefollower

./: .gitignore  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: Makefile.am  Makefile.in  carpet.data  follow.conf  fragment.sl  road.data  road_across.data  road_dashed1.data  road_dashed2.data  road_narrow.data  road_narrowwide.data  road_vcross.data  road_widenarrow.data  road_zigzag.data  vertex.sl  wall.data  wood.data
src/: Makefile.am  Makefile.in  Makefile.old  acrossroadsegment.cpp  acrossroadsegment.hpp  camera.cpp  camera.hpp  cameraparameters.cpp  cameraparameters.hpp  camparams.hpp  command.cpp  command.hpp  daemon.h  dashedline1segment.cpp  dashedline1segment.hpp  dashedline2segment.cpp  dashedline2segment.hpp  differentialroadfinder.cpp  differentialroadfinder.hpp  doubleturnleftsegment.cpp  doubleturnleftsegment.hpp  doubleturnrightsegment.cpp  doubleturnrightsegment.hpp  doubleturnsegment.cpp  doubleturnsegment.hpp  follow-command  follow-monitor  follow-monitor.py  follow.py  followcalibrate.cpp  followexception.hpp  framecapture.cpp  framecapture.hpp  gl.hpp  gpiomotors.cpp  gpiomotors.hpp  line.cpp  line.hpp  linefollowerapp.cpp  linefollowerapp.hpp  (+50 more)
