
# Textures for the virtual camera
textures = carpet.data road_across.data road_dashed1.data road_dashed2.data \
           road.data road_narrow.data road_narrowwide.data road_vcross.data \
           road_widenarrow.data road_zigzag.data wall.data wood.data

# Shaders for GLES2
shaders = fragment.sl vertex.sl

dist_data_DATA = $(textures) $(shaders)

# Configuration file
dist_sysconf_DATA = follow.conf
